# normalize-journal-titles

./: .gitignore  README.md  main.py  pyproject.toml  report_with_issn
data_lookup_tables/: journal_list_wikidata.csv:Zone.Identifier
docs/: erd.puml
src/: main.py  njt.py  njt_file_io.py  njt_isxn_utils.py  njt_original.py  njt_requests.py  scratch.py
