[project]
name = "normalize-journal-titles"
version = "0.1.0"
description = "Normalize Journal Titles is a command line tool to normalize journal titles obtained from user-entered data for interlibrary loan reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "logging>=0.4.9.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.11.10",
]
